--- a/SoftwareEngineering/lab2/styles.css
+++ b/SoftwareEngineering/lab2/styles.css
@@ -1,54 +1,52 @@
-html,
 body {
-  font-family: Roboto;
-  height: 100%;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #f0f0f0; /* Optional: set background color */
+  font-family: Arial, sans-serif;
+  margin: 20px;
 }
 
-.window {
+h1 {
+  text-align: center;
+  color: #007bff;
+}
+
+#schedule {
+  margin-top: 20px;
+}
+
+table {
   width: 100%;
-  height: auto;
-  background: white;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 10px; /* Optional: rounded corners */
-  padding: 10px;
-  box-sizing: border-box;
+  border-collapse: collapse;
+  margin-top: 10px;
 }
 
-input[type="text"] {
-  padding: 10px;
-  margin-right: 10px;
-
-  width: calc(100% - 22px);
+th,
+td {
   border: 1px solid #ddd;
-  border-radius: 5px;
+  padding: 8px;
+  text-align: left;
 }
+
+th {
+  background-color: #f4f4f4;
+}
+
 button {
-  padding: 10px;
-  background: #28a745;
+  margin-top: 20px;
+  padding: 10px 15px;
+  background-color: #007bff;
   color: white;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
 }
-button:hover {
-  background: #218838;
+
+#addBusForm {
+  margin-top: 20px;
 }
 
-.aquarium {
-  position: relative;
-  width: 800px; /* Задайте размер аквариума */
-  height: 500px;
-  border: 2px solid #ccc;
-  overflow: hidden; /* Чтобы рыбки не выходили за границы */
-  background-color: #e0f7fa; /* Цвет фона аквариума */
+#addBusForm input {
+  margin-right: 10px;
+  padding: 5px;
 }
 
-.input-wrapper {
-  display: flex;
-  align-items: center;
+#addBusForm button {
+  padding: 5px 10px;
 }
